--- a/share/gpodder/ui/adaptive/menus.ui
+++ b/share/gpodder/ui/adaptive/menus.ui
@@ -25,6 +25,10 @@
     </section>
     <section>
       <item>
+        <attribute name="label" translatable="yes">Open Logs</attribute>
+        <attribute name="action">app.logs</attribute>
+      </item>
+      <item>
         <attribute name="label" translatable="yes">Help</attribute>
         <attribute name="action">app.help</attribute>
       </item>
@@ -150,6 +154,10 @@
           <attribute name="action">win.openEpisodeDownloadFolder</attribute>
           <attribute name="label" translatable="yes">Open download folder</attribute>
         </item>
+        <item>
+          <attribute name="action">win.selectChannel</attribute>
+          <attribute name="label" translatable="yes">Select channel</attribute>
+        </item>
       </section>
       <section>
         <item>
@@ -180,13 +188,22 @@
           <attribute name="accel">&lt;Primary&gt;t</attribute>
         </item>
         <item>
-          <attribute name="action">win.showEpisodeDescription</attribute>
-          <attribute name="label" translatable="yes">Episode descriptions</attribute>
-          <attribute name="accel">&lt;Primary&gt;d</attribute>
-        </item>
-        <item>
           <attribute name="action">win.searchAlwaysVisible</attribute>
           <attribute name="label" translatable="yes">Always show Find entries</attribute>
+        </item>
+      </section>
+      <section>
+        <item>
+          <attribute name="action">win.viewHideBoringPodcasts</attribute>
+          <attribute name="label" translatable="yes">Hide podcasts without episodes</attribute>
+        </item>
+        <item>
+          <attribute name="action">win.viewShowAllEpisodes</attribute>
+          <attribute name="label" translatable="yes">"All episodes" in podcast list</attribute>
+        </item>
+        <item>
+          <attribute name="action">win.viewShowPodcastSections</attribute>
+          <attribute name="label" translatable="yes">Use sections for podcast list</attribute>
         </item>
       </section>
       <section>
@@ -217,12 +234,25 @@
       </section>
       <section>
         <item>
-          <attribute name="action">win.viewHideBoringPodcasts</attribute>
-          <attribute name="label" translatable="yes">Hide podcasts without episodes</attribute>
-        </item>
-        <item>
           <attribute name="action">win.viewAlwaysShowNewEpisodes</attribute>
           <attribute name="label" translatable="yes">Always show New Episodes</attribute>
+        </item>
+        <item>
+          <attribute name="action">win.viewTrimEpisodeTitlePrefix</attribute>
+          <attribute name="label" translatable="yes">Trim episode title prefix</attribute>
+        </item>
+        <item>
+          <attribute name="action">win.viewShowEpisodeDescription</attribute>
+          <attribute name="label" translatable="yes">Episode descriptions</attribute>
+          <attribute name="accel">&lt;Primary&gt;d</attribute>
+        </item>
+        <item>
+          <attribute name="action">win.viewShowEpisodeReleasedTime</attribute>
+          <attribute name="label" translatable="yes">Show episode released time</attribute>
+        </item>
+        <item>
+          <attribute name="action">win.viewRightAlignEpisodeReleasedColumn</attribute>
+          <attribute name="label" translatable="yes">Right align episode released column</attribute>
         </item>
         <item>
           <attribute name="action">win.viewCtrlClickToSortEpisodes</attribute>
@@ -236,9 +266,35 @@
   </menu>
   <menu id="channels-context">
     <section>
+      <attribute name="display-hint">horizontal-buttons</attribute>
       <item>
         <attribute name="action">win.updateChannel</attribute>
         <attribute name="label" translatable="yes">Update channel</attribute>
+        <attribute name="verb-icon">view-refresh-symbolic</attribute>
+      </item>
+      <item>
+        <attribute name="action">win.editChannel</attribute>
+        <attribute name="label" translatable="yes">Channel settings</attribute>
+        <attribute name="verb-icon">preferences-other-symbolic</attribute>
+      </item>
+      <item>
+        <attribute name="action">win.removeChannel</attribute>
+        <attribute name="label" translatable="yes">Delete channel</attribute>
+        <attribute name="verb-icon">edit-delete-symbolic</attribute>
+      </item>
+    </section>
+    <section>
+      <item>
+        <attribute name="action">win.updateChannel</attribute>
+        <attribute name="label" translatable="yes">Update channel</attribute>
+      </item>
+      <item>
+        <attribute name="action">win.editChannel</attribute>
+        <attribute name="label" translatable="yes">Channel settings</attribute>
+      </item>
+      <item>
+        <attribute name="action">win.removeChannel</attribute>
+        <attribute name="label" translatable="yes">Delete channel</attribute>
       </item>
     </section>
     <section>
@@ -256,19 +312,29 @@
         <attribute name="action">win.channelAutoArchive</attribute>
         <attribute name="label" translatable="yes">Archive all episodes</attribute>
       </item>
-      <item>
-        <attribute name="action">win.removeChannel</attribute>
-        <attribute name="label" translatable="yes">Delete channel</attribute>
-      </item>
     </section>
-    <section>
-      <item>
-        <attribute name="action">win.editChannel</attribute>
-        <attribute name="label" translatable="yes">Channel settings</attribute>
-      </item>
-    </section>
+    <!-- Extensions -->
   </menu>
   <menu id="episodes-context">
+    <section>
+      <attribute name="display-hint">horizontal-buttons</attribute>
+      <item>
+        <attribute name="action">win.play</attribute>
+        <attribute name="label" translatable="yes">Play</attribute>
+        <attribute name="verb-icon">media-playback-start-symbolic</attribute>
+      </item>
+      <item>
+        <attribute name="action">app.download</attribute>
+        <attribute name="label" translatable="yes">Download</attribute>
+        <attribute name="verb-icon">document-save-symbolic</attribute>
+      </item>
+      <!-- Cancel -->
+      <item>
+        <attribute name="action">win.delete</attribute>
+        <attribute name="label" translatable="yes">Delete</attribute>
+        <attribute name="verb-icon">edit-delete-symbolic</attribute>
+      </item>
+    </section>
     <section>
       <item>
         <attribute name="action">win.play</attribute>
@@ -305,6 +371,10 @@
         <attribute name="action">win.openEpisodeDownloadFolder</attribute>
         <attribute name="label" translatable="yes">Open download folder</attribute>
       </item>
+      <item>
+        <attribute name="action">win.selectChannel</attribute>
+        <attribute name="label" translatable="yes">Select channel</attribute>
+      </item>
     </section>
   </menu>
   <menu id="episodes-context-sendto">
@@ -319,13 +389,31 @@
   </menu>
   <menu id="downloads-context">
     <section>
+      <attribute name="display-hint">horizontal-buttons</attribute>
       <item>
-        <attribute name="action">app.download</attribute>
+        <attribute name="action">app.forceDownload</attribute>
         <attribute name="label" translatable="yes">Start download now</attribute>
+        <attribute name="verb-icon">document-save-symbolic</attribute>
       </item>
       <item>
         <attribute name="action">app.preview_from_downloads</attribute>
         <attribute name="label" translatable="yes">Preview</attribute>
+      </item>
+      <item>
+        <attribute name="action">app.pause</attribute>
+        <attribute name="label" translatable="yes">Pause</attribute>
+        <attribute name="verb-icon">media-playback-pause-symbolic</attribute>
+      </item>
+      <item>
+        <attribute name="action">app.cancel</attribute>
+        <attribute name="label" translatable="yes">Cancel</attribute>
+        <attribute name="verb-icon">process-stop-symbolic</attribute>
+      </item>
+    </section>
+    <section>
+      <item>
+        <attribute name="action">app.download</attribute>
+        <attribute name="label" translatable="yes">Start download now</attribute>
       </item>
       <item>
         <attribute name="action">app.pause</attribute>
