--- a/share/gpodder/ui/adaptive/gpodder.ui
+++ b/share/gpodder/ui/adaptive/gpodder.ui
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.38.2 -->
+<!-- Generated with glade 3.40.0 -->
 <!--*- mode: xml -*-->
 <interface>
   <requires lib="gtk+" version="3.24"/>
@@ -56,7 +56,7 @@
                             <property name="visible">True</property>
                             <property name="can-focus">True</property>
                             <property name="shadow-type">none</property>
-                            <property name="secondary-icon-name">edit-delete-symbolic</property>
+                            <property name="secondary-icon-name">edit-clear-symbolic</property>
                             <property name="primary-icon-activatable">False</property>
                             <property name="primary-icon-sensitive">False</property>
                             <property name="placeholder-text" translatable="yes">Search channels</property>
@@ -332,7 +332,7 @@
                                     <property name="visible">True</property>
                                     <property name="can-focus">True</property>
                                     <property name="shadow-type">none</property>
-                                    <property name="secondary-icon-name">edit-delete-symbolic</property>
+                                    <property name="secondary-icon-name">edit-clear-symbolic</property>
                                     <property name="primary-icon-activatable">False</property>
                                     <property name="primary-icon-sensitive">False</property>
                                     <property name="placeholder-text" translatable="yes">Search episodes</property>
